# fastapi-todolist

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
.github/: pull_request_template.md
alembic/: env.py
alembic/versions/: 33ef22aa4c87_rename_user_columns_and_remove_.py  49ba933d353f_create_user_table.py  9eda470a718c_create_todo_table.py  e4eeee6cc8f7_initial_empty_migration.py
app/: main.py
app/api/v1/: __init__.py  auth.py  todo.py
app/core/: config.py  database.py  deps.py  exceptions.py  security.py
app/models/: __init__.py  todo.py  user.py
app/repositories/: todo_repository.py  user_repository.py
app/schemas/: auth.py  todo.py
app/services/: auth_service.py  todo_service.py
